<resources>
    <string name="app_name">IOT Conn</string>
    <string name="welcome">Welcome !</string>

    <string name="show_connected">Connected!</string>
    <string name="show_success">Success!</string>
    <string name="show_alert">Alert!</string>
    <string name="show_error">Error!</string>
    <string name="show_not_connected">Error in connection!</string>
    <string name="show_error_action">Error in action!</string>
    <string name="show_registration_error">Registration attempt failed</string>
    <string name="show_login_progress">Login in progress</string>
    <string name="show_signing_error">There was a problem signing in</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_msg">Type a message</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_username">Username</string>

    <string name="prompt_device_host">Host</string>
    <string name="prompt_device_port">Port</string>
    <string name="prompt_device_name">Name</string>
    <string name="prompt_device_username">Username</string>
    <string name="prompt_device_password">Password</string>
    <string name="prompt_device_topic">Topic</string>
    <string name="prompt_device_status">Status</string>

    <string name="prompt_btn_name">Button Name</string>
    <string name="prompt_btn_value">Value</string>

    <string name="prompt_device_delete">Delete Device</string>
    <string name="prompt_really_delete">Do you really want to delete this device?</string>
    <string name="prompt_command_delete">Delete Command</string>
    <string name="prompt_really_delete_command">Do you really want to delete this command?</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="field_required">This field is required</string>
    <string name="login_failed">"Login failed"</string>

    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>

    <string name="action_back">Back</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_create">Create</string>
    <string name="action_create_action">Create Action</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_register">Register</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_save">Save</string>
    <string name="action_send">Send</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>

</resources>
